changed a file name

--- a/eco/kafka_kraft/kustomization.yml
+++ b/eco/kafka_kraft/kustomization.yml
@@ -22,7 +22,7 @@ configMapGenerator:
 
 - name: kafka-ssl
   files:
-    - ./certs/broker_creds
+    - ./certs/jks_pass
     - ./certs/kafka.keystore.jks
     - ./certs/kafka.truststore.jks
   options:
